# PatchingFPGAs

./: .gitignore  LICENSE  README.md
1_opentitan_base/: spiflash
1_opentitan_base/hsm_demo/: hsm_demo.c  hsm_demo.patch  hsm_demo_fpga_nexysvideo.dis  hsm_demo_fpga_nexysvideo.elf  meson.build
1_opentitan_base/hsm_demo_instruction_replacement/: hsm_demo.c  hsm_demo_fpga_nexysvideo.dis  hsm_demo_fpga_nexysvideo.elf  meson.build
2_trojan_designs/aes_register_trojan/: aesregistertrojan.sv  aesregistertrojan.xdc
2_trojan_designs/instruction_mod_trojan/: build_trojan.sh  instructionmodtrojan.sv  instructionmodtrojan.xdc  requirements.txt  riscv_binary_modding_helper.py  trojan.S  trojan_listing.dis
2_trojan_designs/instruction_mod_trojan/code_modding/: README.md  find_mask.py  lst_converter.py  riscv_binary_modding_helper.py  trojan.elf
2_trojan_designs/instruction_replacement_trojan/: instructionreplacementtrojan.sv  instructionreplacementtrojan.vhd  instructionreplacementtrojan.xdc
2_trojan_designs/tiny_logic_analyzer/: tinylogicanalyzer.sv  tinylogicanalyzer.xdc
2_trojan_designs/tiny_logic_analyzer/tools/: README.md  bscan_logic.cfg  ramb36_parser.py  tiny_logic_run.py  tinylogicanalyzer.patch
3_trojan_insertion/: route_and_merge_trojan.sh
3_trojan_insertion/1_placer/: extract_design_cells.tcl  extract_placement_and_dummy_cells.tcl  generate_dummy_cells_and_constraints.py  generate_dummy_cells_and_constraints2.py  generate_dummy_cells_and_constraints_old.py
3_trojan_insertion/2_router/: cleanup_and_merge_fasm.py  cleanup_fasm.py  cleanup_fasm_2.py  reroute_fasm_base_to_mod.py  reroute_fasm_base_to_mod2.py  write_bitstream.tcl
3_trojan_insertion/3_bitstream_merging/: README.md  bitstream
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/: .gitignore  CMakeLists.txt
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/app/: CMakeLists.txt  reader.cpp
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/include/architecture/: block_type.h  config_bus.h  config_column.h  config_row.h  frame_address.h  global_clock_region.h  part.h
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/include/assembler/: assembler.h  disassembler.h  fasm.h
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/include/configuration/: bitstream.h  configuration.h  configuration_packet.h  configuration_register.h
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/include/database/: database.h  grid.h  tile_data.h  tile_segbits.h  tile_segbits_alias.h  tile_segbits_default.h
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/include/utils/: memory_mapped_file.h  utils.h
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/src/architecture/: block_type.cpp  config_bus.cpp  config_column.cpp  config_row.cpp  frame_address.cpp  global_clock_region.cpp  part.cpp
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/src/assembler/: assembler.cpp  disassembler.cpp  fasm.cpp
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/src/configuration/: bitstream.cpp  configuration.cpp  configuration_packet.cpp  configuration_register.cpp
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/src/database/: database.cpp  grid.cpp  tile_segbits_alias.cpp  tile_segbits_default.cpp
3_trojan_insertion/3_bitstream_merging/7-series-bitstream/src/utils/: memory_mapped_file.cpp  utils.cpp
3_trojan_insertion/4_tools/: fasm_conflict_check.py
